--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9856,3 +9856,42 @@ a.button {
     background-size: 108% 50px;
     background-color: transparent;
     background-image: url("../img/twi.png"); }
+
+.bar.bar-positive {
+  background-color: rgba(45, 123, 255, 0.87);
+  height: 50px; }
+
+.has-header {
+  top: 50px; }
+
+.home-header .title {
+  font-size: 30px; }
+
+.home-header .button {
+  border-color: transparent;
+  background-color: transparent; }
+  .home-header .button .ion-search:before {
+    font-size: 40px; }
+
+.home-content {
+  background-color: #c3f3ff; }
+  .home-content .sub-header-area {
+    background-color: white; }
+    .home-content .sub-header-area ion-scroll {
+      white-space: nowrap; }
+      .home-content .sub-header-area ion-scroll img {
+        height: 100px; }
+  .home-content .home-row .col .card {
+    margin: 0; }
+    .home-content .home-row .col .card .program-image {
+      background-size: 80% auto;
+      background-position: 50%;
+      background-repeat: no-repeat;
+      height: 150px;
+      display: inline-block;
+      width: 100%; }
+    .home-content .home-row .col .card h4 {
+      text-align: center; }
+    .home-content .home-row .col .card .program-content {
+      margin: 0 10px;
+      word-break: break-all; }
