--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,6 +1,12 @@
 .bar.bar-positive{
 	background-color: rgba(45, 123, 255, 0.87);
 	height: 50px;
+
+	.title{
+		font-size: 25px;
+		height: 50px;
+		line-height: 51px;
+	}
 }
 
 .has-header{
