--- a/scss/template.scss
+++ b/scss/template.scss
@@ -35,12 +35,14 @@
 			background-size: 208% 50px;
 			background-color: transparent;
 			margin-right: 10px;
+			border-color: transparent;
 			background-image: url("../img/fb.png");
 		}
 		.twitter{
 			background-repeat: no-repeat;
 			width: calc(50% - 10px);
 			height: 50px;
+			border-color: transparent;
 			background-size: 108% 50px;
 			background-color: transparent;
 			background-image: url("../img/twi.png");
