--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,7 +10,7 @@
 			</button>
 		</div>
 	</ion-header-bar>
-	<ion-content class="home-content">
+	<ion-content class="home-content" scroll="false">
 		<div class="sub-header-area">
 			<label>
 				あなたにおすすめ
@@ -23,6 +23,7 @@
 				<img class="program-image" src="img/sekai.jpg">	<img class="program-image" src="img/sekai.jpg">
 			</ion-scroll>
 		</div>
+		<ion-scroll direction="y">
 		<div class="home-row row">
 			<div class="col">
 				<div class="card">
@@ -56,5 +57,6 @@
 				</div>
 			</div>
 		</div>
+		</ion-scroll>
 	</ion-content>
 </ion-view>
