--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="ログイン">
+<ion-view view-title="ログイン" hide-nav-bar="true">
 	<ion-content class="login-content">
 		<div class="logo">
 		</div>
