--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,3 +23,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "scss/template";
 @import "scss/common";
 @import "scss/home";
+@import "scss/timeline";
