--- a/scss/home.scss
+++ b/scss/home.scss
@@ -33,9 +33,9 @@
 					margin: 0;
 					.program-image{
 						background-size: 80% auto;
-						background-position: 50%;
+						background-position: 50% 20px;
 						background-repeat: no-repeat;
-						height: 150px;
+						height: 200px;
 						display: inline-block;
 						width: 100%;
 					}
