--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,3 +24,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "scss/common";
 @import "scss/home";
 @import "scss/timeline";
+@import "scss/ticket";
+@import "scss/detail";
+@import "scss/introduce";
