--- a/scss/template.scss
+++ b/scss/template.scss
@@ -4,7 +4,7 @@
 		height: 250px;
 		background-image: url("../img/logo.png");
 		background-size: 50%;
-		background-position: 50% 40px;
+		background-position: 50%;
 	}
 
 	label{
