--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9820,7 +9820,7 @@ a.button {
   height: 250px;
   background-image: url("../img/logo.png");
   background-size: 50%;
-  background-position: 50% 40px; }
+  background-position: 50%; }
 
 .login-content label {
   margin-bottom: 20px;
@@ -9893,9 +9893,9 @@ a.button {
       margin: 0; }
       .home-content ion-scroll .home-row .col .card .program-image {
         background-size: 80% auto;
-        background-position: 50%;
+        background-position: 50% 20px;
         background-repeat: no-repeat;
-        height: 150px;
+        height: 200px;
         display: inline-block;
         width: 100%; }
       .home-content ion-scroll .home-row .col .card h4 {
@@ -9923,3 +9923,28 @@ a.button {
 
 .hoge {
   color: #007b09; }
+
+.ticket-area .my-area {
+  display: inline-flex;
+  justify-content: center;
+  background-repeat: no-repeat;
+  height: 200px;
+  background-size: 75%;
+  width: 48%;
+  background-position: 50% 40px; }
+  .ticket-area .my-area.my-ticket-area {
+    background-image: url("../img/ticket.png"); }
+  .ticket-area .my-area.my-point-area {
+    background-image: url("../img/point.png"); }
+
+.ticket-area .score-area {
+  font-size: 30px;
+  display: inline-block;
+  width: 48%;
+  text-align: center;
+  position: absolute;
+  bottom: 60px; }
+  .ticket-area .score-area.ticket-score-area {
+    left: 0; }
+  .ticket-area .score-area.point-score-area {
+    left: 50%; }
