--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -1,8 +1,12 @@
 <div class="ticket-area">
-	<div class="my-ticket-area">
+	<div class="my-area my-ticket-area">
+	</div>
+	<div class="my-area my-point-area">
+	</div>
+	<span class="score-area ticket-score-area">
 		22枚
-	</div>
-	<div class="my-point-area">
+	</span>
+	<span class="score-area point-score-area">
 		114514P
-	</div>
+	</span>
 </div>
