--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -1,4 +1,14 @@
 <div class="ticket-area">
+	<div class="ticket-action-button">
+		<button class="button button-assertive">
+		チケットを買う
+		</button>
+	</div>
+	<div class="ticket-action-button">
+		<button class="button button-positive">
+		チケットを売る
+		</button>
+	</div>
 	<div class="my-area my-ticket-area">
 	</div>
 	<div class="my-area my-point-area">
