--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -1,12 +1,29 @@
 <div class="ticket-area">
+	<ion-list>
+		<ion-item class="item-thumbnail-left">
+			<img src="img/matuko.jpg">
+			<div class="cheer-number">
+			5000人のユーザーが応援しています
+			</div>
+			<div class="product-name">
+			王様ブランチ応援チケット
+			</div>
+			<div class="point-price">
+				320P
+			</div>
+		</ion-item>
+		<ion-item class="ticket-count">
+		０枚
+		</ion-item>
+	</ion-list>
 	<div class="ticket-action-button">
 		<button class="button button-assertive">
-		チケットを買う
+			チケットを買う
 		</button>
 	</div>
 	<div class="ticket-action-button">
 		<button class="button button-positive">
-		チケットを売る
+			チケットを売る
 		</button>
 	</div>
 	<div class="my-area my-ticket-area">
