--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -1,1 +1,23 @@
-<h1>番組紹介</h1>
+<nvd3 options="options" data="data"></nvd3>
+<div class="introduce-card card">
+	<ion-list>
+		<ion-item class="item-thumbnail-left">
+			<img src="">
+			<div class="program-title">
+				王様のブランチ
+			</div>
+			<div class="cast-list">
+				<strong>キャスト</strong>
+				谷原章介 新川優愛
+			</div>
+		</ion-item>
+	</ion-list>
+	<div class="program-content">
+		週末の強い味方！お出かけ情報から、グルメ、映画のランキング、最新エンタメ情報まで！
+
+		毎日土曜朝9:00から『王様のブランチ』
+	</div>
+	<div class="program-image">
+		<img src="">
+	</div>
+</div>
