--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Timeline">
-	<ion-content>
+	<ion-content class="timeline-content">
 		<div class="timeline-segment-area">
 			<ti-segmented-control on-select="buttonClicked($index)">
 				<ti-segmented-control-button class="button-positive" title="'番組紹介'"></ti-segmented-control-button>
@@ -11,11 +11,11 @@
 			<program-detail>
 			</program-detail>
 		</div>
-		<div class="ticket-content" ng-if="selectedIndex === 1">
+		<div class="ticket-content" ng-if="selectedIndex === 2">
 			<ticket>
 			</ticket>
 		</div>
-		<div class="introduce-content" ng-if="selectedIndex === 2">
+		<div class="introduce-content" ng-if="selectedIndex === 1">
 			<introduce>
 			</introduce>
 		</div>
