--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -3,17 +3,18 @@
 		<ion-item class="item-thumbnail-left">
 			<img src="img/matuko.jpg">
 			<div class="cheer-number">
-			5000人のユーザーが応援しています
+				5000人のユーザーが応援しています
 			</div>
 			<div class="product-name">
-			王様ブランチ応援チケット
+				王様ブランチ応援チケット
 			</div>
 			<div class="point-price">
-				320P
+				<img class="d-point-icon" src="img/d-point.png">
+				320
 			</div>
 		</ion-item>
 		<ion-item class="ticket-count">
-		０枚
+			0枚
 		</ion-item>
 	</ion-list>
 	<div class="ticket-action-button">
@@ -26,14 +27,22 @@
 			チケットを売る
 		</button>
 	</div>
-	<div class="my-area my-ticket-area">
-	</div>
-	<div class="my-area my-point-area">
-	</div>
-	<span class="score-area ticket-score-area">
-		22枚
+	<div class="present-data-row">
+	<span class="present-data">
+		<div class="present-data-header">
+			保有チケット数
+		</div>
+		<div class="score-area ticket-score-area">
+			22枚
+		</div>
 	</span>
-	<span class="score-area point-score-area">
-		114514P
+	<span class="present-data">
+		<div class="present-data-header">
+			保有ポイント数
+		</div>
+		<div class="score-area point-score-area">
+			114514P
+		</div>
 	</span>
+	</div>
 </div>
