--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -1,4 +1,6 @@
+<div class="graph-card card">
 <nvd3 options="options" data="data"></nvd3>
+</div>
 <div class="introduce-card card">
 	<ion-list>
 		<ion-item class="item-thumbnail-left">
