--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -1,5 +1,37 @@
 <div class="graph-card card">
-<nvd3 options="options" data="data"></nvd3>
+	<nvd3 options="options" data="data"></nvd3>
+	<div class="cheer-point">
+		総応援ポイント
+	</div>
+	<div class="cheer-point-number">
+		364364810P
+	</div>
+	<div class="row">
+		<span class="col">
+			<div class="header">
+				応援ユーザー数
+			</div>
+			<div class="content">
+				1000
+			</div>
+		</span>
+		<span class="col">
+			<div class="header">
+				現在のチケット価格
+			</div>
+			<div class="content">
+				931
+			</div>
+		</span>
+		<span class="col">
+			<div class="header">
+				総チケット数
+			</div>
+			<div class="content">
+				893
+			</div>
+		</span>
+	</div>
 </div>
 <div class="introduce-card card">
 	<ion-list>
