--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,5 +25,5 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "scss/home";
 @import "scss/timeline";
 @import "scss/ticket";
-@import "scss/detail";
+@import "scss/privilage";
 @import "scss/introduce";
