--- a/www/templates/privilage.html
+++ b/www/templates/privilage.html
@@ -1,1 +1,30 @@
-<h1>番組詳細</h1>
+<div class="privilage-card card">
+	<ion-list>
+		<ion-item class="item-thumbnail-left">
+			<img src="img/matuko.jpg">
+			<div class="privilage-title">
+				チケット特典
+			</div>
+		</ion-item>
+		<div class="content-title">
+			番組観覧
+		</div>
+		<ion-item class="item-thumbnail-right">
+			<img src="img/matuko.jpg">
+			<div class="privilage-content">
+				番組の撮影現場に！！番組終了時にはMCの谷原章介との写真撮影も！！
+			</div>
+		</ion-item>
+		<div class="content-title">
+			番組紹介グッズをプレゼント
+		</div>
+		<ion-item class="item-thumbnail-right">
+			<img src="img/matuko.jpg">
+			<div class="privilage-content">
+			書籍紹介ランキング第１位
+
+			朝井リョウの「何様」をMCの新川のサイン入りでプレゼント！
+			</div>
+		</ion-item>
+	</ion-list>
+</div>
