--- a/www/templates/privilage.html
+++ b/www/templates/privilage.html
@@ -1,7 +1,7 @@
 <div class="privilage-card card">
 	<ion-list>
 		<ion-item class="item-thumbnail-left">
-			<img src="img/matuko.jpg">
+			<img src="img/ousama.png">
 			<div class="privilage-title">
 				チケット特典
 			</div>
@@ -10,7 +10,7 @@
 			番組観覧
 		</div>
 		<ion-item class="item-thumbnail-right">
-			<img src="img/matuko.jpg">
+			<img src="img/tanihara.png">
 			<div class="privilage-content">
 				番組の撮影現場に！！番組終了時にはMCの谷原章介との写真撮影も！！
 			</div>
@@ -19,7 +19,7 @@
 			番組紹介グッズをプレゼント
 		</div>
 		<ion-item class="item-thumbnail-right">
-			<img src="img/matuko.jpg">
+			<img src="img/layer.png">
 			<div class="privilage-content">
 			書籍紹介ランキング第１位
 
