--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -36,7 +36,7 @@
 <div class="introduce-card card">
 	<ion-list>
 		<ion-item class="item-thumbnail-left">
-			<img src="">
+			<img src="img/ousama.png">
 			<div class="program-title">
 				王様のブランチ
 			</div>
