--- a/www/templates/introduce.html
+++ b/www/templates/introduce.html
@@ -45,13 +45,35 @@
 				谷原章介 新川優愛
 			</div>
 		</ion-item>
-	</ion-list>
-	<div class="program-content">
-		週末の強い味方！お出かけ情報から、グルメ、映画のランキング、最新エンタメ情報まで！
 
-		毎日土曜朝9:00から『王様のブランチ』
-	</div>
-	<div class="program-image">
-		<img src="">
-	</div>
+		<div class="program-content">
+			週末の強い味方！お出かけ情報から、グルメ、映画のランキング、最新エンタメ情報まで！
+
+			毎日土曜朝9:00から『王様のブランチ』
+		</div>
+		<div class="program-image">
+			<img src="img/tanihara.png">
+		</div>
+		<ion-item class="item-thumbnail-left dot-thumbnail">
+			<img src="img/orange-dot.png">
+			<div class="introduce-content-header">
+				放送時間
+			</div>
+			<div class="introduce-content-content">
+				毎週土曜日あさ9:30
+			</div>
+		</ion-item>
+		<ion-item class="item-thumbnail-left dot-thumbnail">
+			<img src="img/purple-dot.png">
+			<div class="introduce-content-header">
+				最近の放送
+			</div>
+			<div class="introduce-content-content">
+				<div class="recent-content-date">
+					2016/9/17
+				</div>
+				佐藤健が「読書LOVERS」に登場！愛してやまない本３作品を紹介
+			</div>
+		</ion-item>
+	</ion-list>
 </div>
