--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,7 +13,7 @@
 	<ion-content class="home-content" scroll="false">
 		<div class="sub-header-area">
 			<label>
-				あなたにおすすめ
+				<img src="img/bell.png">あなたにおすすめ
 			</label>
 			<ion-scroll zooming="true" direction="x" scrollbar-x="false">
 				<img class="program-image" src="img/matuko.jpg">
@@ -27,7 +27,9 @@
 		<div class="home-row row">
 			<div class="col">
 				<div class="card">
-					<span class="program-image" style="background-image: url('img/matuko.jpg');"></span>
+					<span class="program-image-area">
+						<img class="program-image" src="img/matuko.jpg">
+					</span>
 					<h4>
 						王様のブランチ
 					</h4>
@@ -50,7 +52,9 @@
 			</div>
 			<div class="col">
 				<div class="card">
-					<span class="program-image" style="background-image: url('img/matuko.jpg');"></span>
+					<span class="program-image-area">
+						<img class="program-image" src="img/suiyoubi.png">
+					</span>
 					<h4>
 						王様のブランチ
 					</h4>
