--- a/www/templates/privilage.html
+++ b/www/templates/privilage.html
@@ -3,7 +3,7 @@
 		<ion-item class="item-thumbnail-left">
 			<img src="img/ousama.png">
 			<div class="privilage-title">
-				チケット特典
+				応援特典
 			</div>
 		</ion-item>
 		<div class="content-title">
