--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -3,7 +3,7 @@
 		<div class="timeline-segment-area">
 			<ti-segmented-control on-select="buttonClicked($index)">
 				<ti-segmented-control-button class="button-positive" title="'チケット'" selected></ti-segmented-control-button>
-				<ti-segmented-control-button class="button-positive" title="'チケット特典'"></ti-segmented-control-button>
+				<ti-segmented-control-button class="button-positive" title="'応援特典'"></ti-segmented-control-button>
 				<ti-segmented-control-button class="button-positive" title="'番組紹介'"></ti-segmented-control-button>
 			</ti-segmented-control>
 		</div>
