--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -17,10 +17,11 @@
 			</label>
 			<ion-scroll zooming="true" direction="x" scrollbar-x="false">
 				<img class="program-image" src="img/matuko.jpg">
-				<img class="program-image" src="img/ousama.png">
+				<img class="program-image" src="img/ousama.png" on-tap="goTo()">
 				<img class="program-image" src="img/sekai.jpg">
 				<img class="program-image" src="img/suiyoubi.png">
-				<img class="program-image" src="img/sekai.jpg">	<img class="program-image" src="img/sekai.jpg">
+				<img class="program-image" src="img/sekai.jpg">
+				<img class="program-image" src="img/sekai.jpg">
 			</ion-scroll>
 		</div>
 		<ion-scroll direction="y">
