--- a/scss/home.scss
+++ b/scss/home.scss
@@ -36,7 +36,7 @@
 		.home-row{
 			.col{
 				.card{
-					margin: 0;
+					margin: 10px 0;
 					.program-image-area{
 						display: inline-block;
 						width: 100%;
