--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -27,38 +27,29 @@
 		<ion-scroll direction="y">
 		<div class="home-row row">
 			<div class="col">
-				<div class="card">
+				<div class="card" ng-repeat="program in programs" ng-if="$index % 2 == 0">
 					<span class="program-image-area">
 						<img class="program-image" src="img/matuko.jpg">
 					</span>
 					<h4>
-						王様のブランチ
+						{{program.name}}
 					</h4>
 					<div class="program-content">
-						正式名称は「究極のサバイバル
-						アタックSASUKE」。1997年
-						秋に初めて放送され、2016年
-						7月の時点で32回開催されて
-						いる。元々はTBS『筋肉番付』
-						のスペシャル企画としてスタート
-						し、同番組の終了以降、2002年
-						秋の第10回から独立番組となる。
-						応募者に対してはオーディション
-						や予選会などを行い、それらを
-						通過して選抜された者だけが
-						出場できる。毎回2000通以上
-						の応募がある。
+						{{program.program_info}}
 					</div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card">
+				<div class="card" ng-repeat="program in programs" ng-if="$index % 2 == 1">
 					<span class="program-image-area">
 						<img class="program-image" src="img/suiyoubi.png">
 					</span>
 					<h4>
-						王様のブランチ
+						{{program.name}}
 					</h4>
+					<div class="program-content">
+						{{program.program_info}}
+					</div>
 				</div>
 			</div>
 		</div>
