--- a/scss/ticket.scss
+++ b/scss/ticket.scss
@@ -13,7 +13,7 @@
 			}
 			border: transparent;
 			height: 50px;
-			font-size: 50px;
+			font-size: 40px;
 			text-align: left;
 			line-height: 45px;
 			input{
@@ -23,8 +23,8 @@
 
 	}
 	.ticket-count{
-		font-size: 30px;
-		text-align: center;
+		font-size: 20px;
+		text-align: right;
 		input{
 			font-size: 30px;
 			width: 200px;
@@ -41,6 +41,9 @@
 	.ticket-action-button{
 		width: 100%;
 		margin: 15px 0;
+		.button-assertive{
+			background-color: #ffa800;
+		}
 		.button{
 			font-size: 25px;
 			width: 80%;
