--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -10,11 +10,14 @@
 			</div>
 			<div class="point-price item item-input">
 				<img class="d-point-icon" src="img/d-point.png">
-				<input type="number" ng-model="price" ng-init="price = 320">	
+				320
 			</div>
 		</ion-item>
 		<ion-item class="ticket-count">
-			<input type="number" ng-model="number" ng-init="number = 0">
+			<input type="number" ng-model="number">枚
+		</ion-item>
+		<ion-item class="ticket-count">
+			<input type="number" ng-model="price">P
 		</ion-item>
 		<ion-item class="option-item" on-tap="changeSlide()">
 			▼オプション
@@ -24,7 +27,7 @@
 		</ion-item>
 	</ion-list>
 	<div class="ticket-action-button">
-		<button class="button button-assertive">
+		<button class="button button-assertive" on-tap="buyTicket()">
 			チケットを買う
 		</button>
 	</div>
@@ -39,7 +42,7 @@
 				保有チケット数
 			</div>
 			<div class="score-area ticket-score-area">
-				22枚
+				22
 			</div>
 		</span>
 		<span class="present-data">
@@ -47,7 +50,7 @@
 				保有ポイント数
 			</div>
 			<div class="score-area point-score-area">
-				114514P
+				114514
 			</div>
 		</span>
 	</div>
